--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@example/starter",
+  "name": "cso-frankfurt.de",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -9,6 +9,7 @@
     "preview": "astro preview"
   },
   "devDependencies": {
-    "astro": "^0.23.7"
+    "astro": "^0.23.7",
+    "sass": "^1.49.9"
   }
 }
