--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "cso-frankfurt.de",
   "version": "0.0.1",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
@@ -13,6 +14,11 @@
     "sass": "^1.49.9"
   },
   "dependencies": {
-    "@astrojs/sitemap": "^1.0.1"
+    "@astrojs/sitemap": "^1.0.1",
+    "@contentful/rich-text-html-renderer": "^16.0.2",
+    "@types/marked": "^4.0.8",
+    "contentful": "^9.3.0",
+    "marked": "^4.2.12",
+    "prettier": "^2.8.3"
   }
 }
