--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   },
   "devDependencies": {
     "astro": "2.0.6",
+    "contentful-management": "^10.29.1",
     "sass": "^1.49.9"
   },
   "dependencies": {
     "@astrojs/sitemap": "^1.0.1",
     "@contentful/rich-text-html-renderer": "^16.0.2",
     "@types/marked": "^4.0.8",
+    "cf-content-types-generator": "^2.7.0",
     "contentful": "^9.3.0",
     "marked": "^4.2.12",
     "prettier": "^2.8.3"
