--- a/package.json
+++ b/package.json
@@ -12,9 +12,7 @@
   "devDependencies": {
     "astro": "2.0.6",
     "contentful-management": "^10.29.1",
-    "sass": "^1.49.9"
-  },
-  "dependencies": {
+    "sass": "^1.49.9",
     "@astrojs/sitemap": "^1.0.1",
     "@contentful/rich-text-html-renderer": "^16.0.2",
     "@types/marked": "^4.0.8",
