--- a/package.json
+++ b/package.json
@@ -10,15 +10,15 @@
     "preview": "astro preview"
   },
   "devDependencies": {
-    "astro": "2.0.6",
-    "contentful-management": "^10.29.1",
-    "sass": "^1.49.9",
     "@astrojs/sitemap": "^1.0.1",
     "@contentful/rich-text-html-renderer": "^16.0.2",
     "@types/marked": "^4.0.8",
+    "astro": "^2.0.10",
     "cf-content-types-generator": "^2.7.0",
-    "contentful": "^9.3.0",
+    "contentful": "^9.3.2",
+    "contentful-management": "^10.29.1",
     "marked": "^4.2.12",
-    "prettier": "^2.8.3"
+    "prettier": "^2.8.4",
+    "sass": "^1.58.0"
   }
 }
